# paperCraftEngine

./: .gitignore  .gitmodules  CMakeLists.txt  PaperCraft.sln  README.md  paperCraftEngine.sln  premake5.lua
PaperCraft/: PaperCraft.vcxproj  PaperCraft.vcxproj.filters
PaperCraft/src/: PaperCraft.h  Test.cpp  Test.h
PaperCraft/src/PaperCraft/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
PaperCraft/src/PaperCraft/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
assets/scripts/: Level1.lua  Level2.lua  Level3.lua
src/: Game.cpp  Game.h  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifeCycleSystem.h  RenderColliderSystem.h  RenderGUISystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
